--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    position: sticky;
     
  }
 .logo{
@@ -45,11 +46,22 @@
     height: auto;
     text-decoration: none;
     color: white;
-    margin-left: 90%;
+    margin-left: 70%;
     display:flex;
     flex-direction: row;
     justify-content: flex-end;
     
+}
+.sign-in{
+    height: auto;
+    text-decoration: none;
+    color: white;
+    margin-left: 90%;
+    margin-top: auto;
+    margin-bottom: auto;
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 .add-to-cart{
     height: 40px;
@@ -99,7 +111,6 @@
 }
 .categories-container-2{
     background-color: rgb(247, 237, 224);
-    
     display: flex;
     justify-content: space-around;
 }
