--- a/css/style.css
+++ b/css/style.css
@@ -96,12 +96,16 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-  
+
+}
+.categories-1{
+    text-decoration: none !important;
 }
 .categories-card-title{
-    text-decoration: none;
     color: black;
     text-align: center;
+    text-decoration: none !important;
+
 }
 .categories-container-2{
     background-color: rgb(247, 237, 224);
@@ -156,8 +160,10 @@ border-radius: 3px;
     flex-direction:  row;
     justify-content: center;
 }
+.offer-heading{
+}
 .marq{
-    margin-top: 10px;
+  
     background-color: rgb(219, 242, 242);
 }
 .image{
@@ -175,7 +181,64 @@ border-radius: 3px;
     width: 300px;
     box-shadow: 0px 0px 10px  #dbe272;
 }
+.sore-img{
+    height: 100px;
+    width: 100px;
+    
+}
+
+.add{
+    height: 300px;
+    margin-bottom: 150px;
+    margin-top: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 30px;
+    margin-right: 100px;
+    background-color: rgb(232, 241, 247);
+    margin-left: 100px;
+    border-radius: 30px;
+    margin-bottom: 40px;
+}
+.add-img{
+    margin-top: 20px;
+    height: 350px;
+    width: 430px;  
+}
+.add-img2{
+    height: 300px;
+    width: 300px;
+    border-radius: 30px;
+}
+.u-list{
+    margin-top: 60px;
+    font-size: 30px;
+    margin-right: 5px;
+}
+.ul-offers{}
+
+.second_div{
+
+    height: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
+    margin-left: 180px;
+    margin-right: 180px;
+    
+}
+.offer-img{
+    margin-top: 40px;
+    height: 400px;
+     display: flex;
+    border-radius: 10px;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 30px;
 
 
+}
 
 
