--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,40 @@
 .rtc {
     background-color: rgb(212, 227, 239);
+    border-radius: 15px;
+    
 
+}
+.top-heading{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+
+}
+
+.sign-up {
+    height: 40px;
+    width: 90px;
+    text-decoration: none;
+    color: white;
+    margin-top: 15px;
+    background-color: rgb(38, 38, 117);
+    border-radius: 10px;
+    margin-left: 40px;
+    border-color: #353573;
+
+}
+
+.sign-in {
+    height: 40px;
+    width: 90px;
+    text-decoration: none;
+    color: white;
+    margin-left: 30px;
+    border-radius: 10px;
+    background-color: rgb(38, 38, 117);
+    margin-top: 15px;
+    margin-right: 40px;
+    border-color: #353573;
 }
 
 .navbar {
@@ -15,6 +49,7 @@
     flex-direction: row;
     justify-content: space-between;
     position: sticky;
+    margin-top: 7px;
 
 }
 
@@ -36,6 +71,7 @@
     padding: 40px;
     font-size: 4px;
     color: white;
+    
 }
 
 .profile {
@@ -47,22 +83,6 @@
     margin-right: 100%;
 }
 
-.sign-up {
-    height: auto;
-    text-decoration: none;
-    color: white;
-    margin-top: 35px;
-    margin-bottom: 35px;
-
-}
-
-.sign-in {
-    height: auto;
-    text-decoration: none;
-    color: white;
-    margin-left: 90%;
-    margin-bottom: 35px;
-}
 
 .add-to-cart {
     height: 40px;
@@ -71,6 +91,7 @@
     flex-direction: row;
     justify-content: flex-end;
     margin-left: 80%;
+    margin-right: 30px;
 }
 
 .return-order {
