--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 .rtc {
     background-color: rgb(212, 227, 239);
+    
 
 }
 
 .navbar {
-    background-color: rgb(21, 21, 111);
-    height: 50px;
+    background-color:#e6af54;
+    height: 65px;
     align-items: center;
     padding-left: 100px;
     padding-right: 100px;
@@ -15,6 +16,8 @@
     flex-direction: row;
     justify-content: space-between;
     position: sticky;
+    border-top: 1px solid black;
+    border-bottom: 2px solid black;
 
 }
 
@@ -35,7 +38,7 @@
     justify-content: space-between;
     padding: 40px;
     font-size: 4px;
-    color: white;
+    color: rgb(3, 1, 1);
 }
 
 .profile {
@@ -50,7 +53,7 @@
 .sign-up {
     height: auto;
     text-decoration: none;
-    color: white;
+    color: rgb(3, 1, 1);
     margin-top: 35px;
     margin-bottom: 35px;
 
@@ -59,7 +62,7 @@
 .sign-in {
     height: auto;
     text-decoration: none;
-    color: white;
+    color: rgb(3, 1, 1);
     margin-left: 90%;
     margin-bottom: 35px;
 }
@@ -81,17 +84,26 @@
 }
 
 .heading-categori {
-    text-align: start;
+    position: absolute;
+    
+    
+    
 }
 
 .categories-container {
     display: flex;
     justify-content: space-around;
-    background-color: rgb(249, 235, 217);
+    background-color: #fef6e3;
+
+    height: 230px;
+    padding-top: 86px;
+    
+
 }
 
 .categories {
-    width: 130px;
+    width: 180px;
+    
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
@@ -100,8 +112,8 @@
 
 .categories-card {
     background-color: rgb(213, 151, 222);
-    width: 120px;
-    height: 120px;
+    width: 140px;
+    height: 140px;
     border-radius: 60px;
     display: block;
     margin-left: auto;
@@ -114,6 +126,7 @@
 }
 
 .categories-card-title {
+    margin-top: 20px;
     color: black;
     text-align: center;
     text-decoration: none !important;
@@ -121,9 +134,11 @@
 }
 
 .categories-container-2 {
-    background-color: rgb(247, 237, 224);
+    background-color: #fef6e3;
     display: flex;
     justify-content: space-around;
+    padding-bottom: 5px;
+    border-bottom: 1px solid black;
 }
 
 .search-bar {
