--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,44 @@
+
+
 .rtc {
     background-color: rgb(212, 227, 239);
-    
+    border-radius: 15px;
+}
 
+.top-heading {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.sign-up {
+    height: 40px;
+    width: 90px;
+    text-decoration: none;
+    color: white;
+    margin-top: 15px;
+    background-color: rgb(38, 38, 117);
+    border-radius: 10px;
+    margin-left: 40px;
+    border-color: #353573;
+}
+
+.sign-in {
+    height: 40px;
+    width: 90px;
+    text-decoration: none;
+    color: white;
+    margin-left: 30px;
+    border-radius: 10px;
+    background-color: rgb(38, 38, 117);
+    margin-top: 15px;
+    margin-right: 50px;
+    border-color: #353573;
 }
 
 .navbar {
-    background-color:#e6af54;
-    height: 65px;
+    background-color: rgb(21, 21, 111);
+    height: 50px;
     align-items: center;
     padding-left: 100px;
     padding-right: 100px;
@@ -16,9 +48,7 @@
     flex-direction: row;
     justify-content: space-between;
     position: sticky;
-    border-top: 1px solid black;
-    border-bottom: 2px solid black;
-
+    margin-top: 7px;
 }
 
 .logo {
@@ -26,7 +56,6 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-
 }
 
 .home {
@@ -38,7 +67,7 @@
     justify-content: space-between;
     padding: 40px;
     font-size: 4px;
-    color: rgb(3, 1, 1);
+    color: white;
 }
 
 .profile {
@@ -50,23 +79,6 @@
     margin-right: 100%;
 }
 
-.sign-up {
-    height: auto;
-    text-decoration: none;
-    color: rgb(3, 1, 1);
-    margin-top: 35px;
-    margin-bottom: 35px;
-
-}
-
-.sign-in {
-    height: auto;
-    text-decoration: none;
-    color: rgb(3, 1, 1);
-    margin-left: 90%;
-    margin-bottom: 35px;
-}
-
 .add-to-cart {
     height: 40px;
     width: 30px;
@@ -74,6 +86,7 @@
     flex-direction: row;
     justify-content: flex-end;
     margin-left: 80%;
+    margin-right: 30px;
 }
 
 .return-order {
@@ -84,26 +97,17 @@
 }
 
 .heading-categori {
-    position: absolute;
-    
-    
-    
+    text-align: start;
 }
 
 .categories-container {
     display: flex;
     justify-content: space-around;
-    background-color: #fef6e3;
-
-    height: 230px;
-    padding-top: 86px;
-    
-
+    background-color: rgb(249, 235, 217);
 }
 
 .categories {
-    width: 180px;
-    
+    width: 130px;
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
@@ -112,13 +116,12 @@
 
 .categories-card {
     background-color: rgb(213, 151, 222);
-    width: 140px;
-    height: 140px;
+    width: 120px;
+    height: 120px;
     border-radius: 60px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .categories-1 {
@@ -126,19 +129,15 @@
 }
 
 .categories-card-title {
-    margin-top: 20px;
     color: black;
     text-align: center;
     text-decoration: none !important;
-
 }
 
 .categories-container-2 {
-    background-color: #fef6e3;
+    background-color: rgb(247, 237, 224);
     display: flex;
     justify-content: space-around;
-    padding-bottom: 5px;
-    border-bottom: 1px solid black;
 }
 
 .search-bar {
@@ -147,7 +146,6 @@
     border-color: black;
     border-style: solid;
     border-radius: 3px;
-
 }
 
 .search-button {
@@ -169,8 +167,6 @@
     margin-top: 400px;
     margin-left: 40 px;
     margin-right: 80px;
-
-
 }
 
 .footer-logo {
@@ -180,22 +176,17 @@
     justify-content: center;
 }
 
-
-
 .marq {
-
     background-color: rgb(219, 242, 242);
 }
 
 .image {
-
     height: 300px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     margin-top: 10px;
     margin-left: 10px;
-
 }
 
 .img1 {
@@ -207,7 +198,6 @@
 .sore-img {
     height: 100px;
     width: 100px;
-
 }
 
 .add {
@@ -243,10 +233,7 @@
     margin-right: 5px;
 }
 
-
-
 .second_div {
-
     height: 400px;
     display: flex;
     flex-direction: row;
@@ -254,7 +241,6 @@
     margin-top: 20px;
     margin-left: 180px;
     margin-right: 180px;
-
 }
 
 .offer-img {
@@ -265,8 +251,6 @@
     flex-direction: row;
     justify-content: center;
     padding-bottom: 30px;
-
-
 }
 
 .footer {
@@ -275,12 +259,12 @@
     height: 300px;
     margin-top: 80px;
 }
+
 .about {
     position: absolute;
     top: 25px;
     margin-left: 80px;
     color: #e6e6ff;
-    
 }
 
 .about-list {
@@ -296,8 +280,6 @@
     color: #e6e6ff;
     margin-left: 500px;
     top: 25px;
-
-
 }
 
 .help-list {
@@ -321,7 +303,6 @@
     margin-left: 760px;
     top: 90px;
     font-size: 20px;
-
 }
 
 .social {
@@ -337,18 +318,17 @@
     margin-left: 1000px;
     top: 90px;
     font-size: 20px;
-
 }
-.contact{
+
+.contact {
     margin-left: 50px;
 }
-.call{
+
+.call {
     text-decoration: none !important;
 }
-.anc{
+
+.anc {
     text-decoration: none !important;
     color: white;
-    
 }
-    
- 
