added new changes

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
 }
 
 .navbar {
-    background-color: rgb(21, 21, 111);
+    background-color: #d699ff;
     height: 50px;
     align-items: center;
     padding-left: 100px;
