--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
 }
 
 .navbar {
-    background-color: #d699ff;
+    background-color:  rgb(18, 18, 112);
     height: 50px;
     align-items: center;
     padding-left: 100px;
