navbar added in womwn wear

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
     text-decoration: none;
     color: white;
     font-size: 17px;
-
+    margin-left: 30px;
     border-radius: 10px;
     background-color: rgb(38, 38, 117);
     margin-top: 15px;
