hover added on notification button

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,9 @@
     color: white;
     margin-left: 30px;
 }
+.not:hover{
+    height: 40px;
+}
 .not{
     height: 30px;
     text-decoration: none;
