--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,7 @@ height: 110px;
     margin-top: 20px;
     height: 350px;
     width: 430px;
+    filter: drop-shadow(0 0 .45rem var(--blue))
 }
 
 .add-img2 {
